--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\AppUser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Views\Home\CalcPopup.cshtml" />
   </ItemGroup>
 
