fighting with roles

--- a/WebApplication3/appsettings.json
+++ b/WebApplication3/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=C:\\Users\\Bea&Weaver\\source\\repos\\WebApplication3\\AparatyDB.mdf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=C:\\Users\\Bea&Weaver\\source\\repos\\WebApplication3\\AparatyDB1.mdf;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
